package behavioral.iterator.CE1;

public interface Collection63 {
    Iterator63 createIterator();
}
