package behavioral.iterator.CE1;

public interface Iterator63 {
    Object first();
    Object next();
    Object current();
    boolean isDone();


}
